Fixed a big with left and right arrows jumping when entering text in the name field

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -992,3 +992,7 @@ input[type="radio"]:checked + label.color-thumb {
     left: 6px;
 }
 }
+
+.ghost {
+    opacity: 0 !important;
+}
